--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,4 +29,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: aminegha10/listen-emails:latest
+          tags: aminegha10/listen-emails:backend
