--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^8.16.3",
     "mysql2": "^3.14.2",
     "nodemon": "^3.1.10",
-    "react-loading-indicators": "^1.0.1"
+    "react-loading-indicators": "^1.0.1",
+    "winston": "^3.17.0"
   }
 }
